--- a/src/css/atom/blockquote.scss
+++ b/src/css/atom/blockquote.scss
@@ -10,22 +10,26 @@ blockquote.pullquote {
 	text-indent: -0.32em;
 	display: inline-block;
 	font-style: italic;
-	color: color("grey", "lighten-3");
 	padding-left: 60px;
 	p {
 		font-style: inherit;
 		margin-bottom:0;
+		color: color("grey", "darken-2");
 		&:before {
 			content:"“ ";
+			color: color("grey", "lighten-2");
+
 		}
 		&:after {
 			content:" ”";
+			color: color("grey", "lighten-2");
 		}
 	}
 	footer {
-		font-size: $text-size / 1.1;
 		margin-bottom:$text-size * 2;
 		padding-left: 40px;
+		margin-top:10px;
+		color: color("grey", "lighten-2");
 		&:before {
 			content: '\2014';
   			padding: 0 0.5em;
