--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -35,7 +35,8 @@
 
 		$title-font: "Playfair Display", serif;
 		$nav-font: "Open Sans", sans-serif;
-		$text-font: "Open Sans", sans-serif;
+		$text-font: "Libre baskerville", sans-serif;
+
 		$base-color: color("grey", "darken-2");
 
 	/* # Core
@@ -67,6 +68,16 @@
 			background-size: 100% $text-size;
 		}
 
+		.subtitle {
+			font-family: $nav-font;
+			text-transform: uppercase;
+			font-size: $text-size;
+			letter-spacing: .01em;
+			color:color("grey", "lighten-2");
+			margin:-17px;
+			margin-left: $text-size * 2;
+		}
+
 	/* # Titles
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -75,29 +86,29 @@
 			font-family: $title-font;
 			font-weight: 200;
 			margin-top:$text-size * 1.2;
-			margin-bottom: $text-size;
-			letter-spacing: 2px;
+			letter-spacing: .1rem;
 			color: darken($base-color, 10%);
 			&a { font-weight: inherit; }
 		}
 
-		h1, .h1 { @include modular-scale(3, $title-size, $ratio); letter-spacing: -.1rem;}
-		h2, .h2 { @include modular-scale(2, $title-size, $ratio); letter-spacing: -.1rem;}
-		h3, .h3 { @include modular-scale(1, $title-size, $ratio); letter-spacing: -.1rem;}
-		h4, .h4 { @include modular-scale(0, $title-size, $ratio); letter-spacing: -.08rem;}
-		h5, .h5 { @include modular-scale(-1, $title-size, $ratio); letter-spacing: -.05rem;}
-		h6, .h6 { @include modular-scale(-1, $title-size, $ratio); letter-spacing: 0;}
+		h1, .h1 { @include modular-scale(3, $title-size, $ratio); }
+		h2, .h2 { @include modular-scale(2, $title-size, $ratio); }
+		h3, .h3 { @include modular-scale(1, $title-size, $ratio); }
+		h4, .h4 { @include modular-scale(0, $title-size, $ratio); }
+		h5, .h5 { @include modular-scale(-1, $title-size, $ratio); }
+		h6, .h6 { @include modular-scale(-1, $title-size, $ratio); }
 
 	/* # Paragraphs
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
  		p, blockquote, li, q {
  			font-feature-settings: 'kern', 'onum', 'liga';
+ 			word-wrap: break-all;
  			@include modular-scale(1, $text-size, $ratio);
  			font-weight: 400;
- 			line-height: $text-size * 3;
+ 			line-height: 2.1;
 			letter-spacing: .03rem;
-			color:lighten($base-color, 10%);
+			color:color('grey', "base");
 		 	margin-bottom: $text-size;
 		 	&:after {
 		 		clear:both;
@@ -111,14 +122,14 @@
 	/* # Lettrine
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-		article>p:first-child:first-letter {
+		p.lettrine:first-letter {
 			float: left;
 			color: $base-color;
-			font-size: $text-size * 6;
-			line-height: 8rem;
-			padding-top: 4px;
+			font-size: $text-size * 5;
+			line-height: $text-size * 5;
+			padding-top: 7px;
 			padding-right: 8px;
-			padding-left: 3px; 
+			padding-left: 3px;
 		}
 
 
@@ -146,8 +157,9 @@
 	/* # Others
 	–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-		em, i, .i       { font-style: italic; }
-		strong, b, .b   { font-weight: 800; }
+		em, i, .i       { font-style: italic; letter-spacing: 0.1rem; }
+
+		strong, b, .b   { color: color("grey", "darken-2"); font-weight: 800; }
 		.smaller 		{ font-size: 50%; line-height: 50%; }
 		small, .small   { font-size: 70%; line-height: $text-size * 0.5!important; }
 		big, .big		{ font-size: $text-size * 1.3; line-height: $text-size * 1; }
@@ -170,3 +182,15 @@
 		.capitalize 	{ text-transform: capitalize; }
 		.upper-first	{ display:block; &:first-letter { text-transform: uppercase; }  }
 
+		.unselectable 	{ user-select: none;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;  }
+		.selectable		{ user-select: text; }
+
+		.text-center 	{ text-align: center; }
+		.text-left 		{ text-align: left; }
+		.text-right 	{ text-align: right; }
