--- a/src/css/component/_burger-menu.scss
+++ b/src/css/component/_burger-menu.scss
@@ -3,16 +3,17 @@
 //   div.burger-menu.active
 //       div
 
-$duration : 400ms;
+$duration : 350ms;
 
 .burger-menu {
+	position:relative;
 	height: 44px;
+	width: 44px;
 	overflow: hidden;
 	text-indent: 100%;
 	white-space: nowrap;
 	cursor: pointer;
 	border-radius: 50%;
-	background-color: #FFF;
 
 	div {
 		transition: all $duration / 2 ease-in-out;
@@ -24,14 +25,14 @@ $duration : 400ms;
 		display: block;
 		width: 10px;
 		height: 2px;
-		background: #222;
+		background: white;
 		&:before, &:after {
 			transition: all $duration linear;
 
 			content: '';
 			position: absolute;
 			right: 0;
-			background: inherit;
+			background: white;
 			width: 20px;
 			height: 2px;
 		}
@@ -54,18 +55,14 @@ $duration : 400ms;
 		}
 	}
 	&.active {
-		background-color: rgba(20,20,20,0.9);
 		div {
-			background-color:white;
-			background: rgba(0,0,0,0);
+			background: rgba(0,0,0,0)!important;
 			&:before {
 				top:0;
-				background: white;
 				transform: rotate(135deg);
 			}
 			&:after {
 				bottom:0;
-				background: white;
 				transform: rotate(-135deg);
 			}
 		}
