--- a/src/css/helper/tool/modular-scale.scss
+++ b/src/css/helper/tool/modular-scale.scss
@@ -1,6 +1,7 @@
 @mixin modular-scale($index: 0, $base-size: 1.6em, $ratio: 1.62) {
 	font-size: 				modular-scale($index, $base-size, $ratio);
-	line-height: modular-scale($index, $base-size, $ratio);	
+	line-height: modular-scale($index, $base-size, $ratio) * 1.3;
+  margin-bottom: modular-scale($index, $base-size, $ratio) / 2;
 }
 
 //10.000 * 1.618 = 16.180
