--- a/src/css/template/_footer.scss
+++ b/src/css/template/_footer.scss
@@ -1,22 +1,59 @@
-footer {
-	background-color: color("grey", "darken-4");
+.footer {
+	background-color: color("grey", "darken-3");
 	color:white;
 	padding:40px;
-	h1,h2,h3,h4,h5,h6 {
-		color: white;
+	h4,h5,h6 {
+		font-family: $nav-font;
+		color: color("primary", "lighten-5");
+		margin-bottom:12px;
+		@extend .uppercase;
+		letter-spacing: 0.1em;
 	}
 	li {
 		line-height: $text-size / 1;
+		margin-bottom:9px;
 	}
 	a {
 		font-size: $text-size;
 		line-height: $text-size / 1.3;
-		color: color("primary", "base");
+		color: color("primary", "lighten-3");
 		font-weight: 600;
 		border-bottom: 1px solid rgba(color("grey", "darken-1"), 0.3);
 		&:focus, &:hover {
 			text-decoration: none;
 			border-bottom: 1px solid rgba(color("grey", "darken-1"), 0.8);
 		}
+	}
+	hr {
+		opacity:0.1!important;
+	}
+	.logo {
+		float:right;
+		display:inline-block;
+		margin:0px;
+		font-family: $title-font;
+		border: 1px solid rgba(255,255,255,0.4);
+		transition: $transitionProperties;
+		opacity:0.3;
+		h3 {
+			text-align: center;
+			padding: 5px 10px 12px 10px;
+			color:white;
+			margin-top:0;
+			margin-bottom:0;
+		}
+		&:hover {
+			opacity:1;
+		}
+	}
+	.cell:not(.cell-center) {
+		padding-right:55px;
+	}
+}
+.credentials {
+	width: 100%;
+	background-color: color("grey", "darken-4");
+	p {
+		margin: 10px 0px;
 	}
 }
