--- a/src/css/template/_vitrine.scss
+++ b/src/css/template/_vitrine.scss
@@ -1,24 +1,3 @@
-$color-primary: #47DBB4;
-
-.two-col-text {
-	-webkit-column-count: 2;
-	column-count: 2;
-}
-
-.padding {
-	padding-top:80px;
-	padding-bottom:80px;
-}
-.page {
-	width:960px;
-	margin: 0 auto;
-}
-
-.punchline {
-	padding-top:160px;
-	padding-bottom:80px;
-}
-
 .vitrine {
 	animation: fadeIn;
 	animation-duration: .5s;
@@ -27,17 +6,6 @@ $color-primary: #47DBB4;
 	}
 	button {
 		font-weight: bold;
-	}
-
-	.dark {
-		background-color: color("grey", "darken-4");
-		h1,h2,h3,h4,h5,h6 {
-			color:white;
-		}
-	}
-	.subtle-grey {
-		background-color:color("grey", "lighten-4");
-		border-bottom: 1px solid color("grey", "lighten-3");
 	}
 
 	// LANDING CONTENT
@@ -52,13 +20,28 @@ $color-primary: #47DBB4;
 			-webkit-filter: brightness(0.6);
 		}
 	}
-
-	.everest {
-		width: 100%;
-		height:600px;
-		z-index: 1;
-		background-image: linear-gradient(to bottom, cyan 0, rgba(255,255,255,0) 1px);
+	.fixed-background-med {
+		.section-background {
+			-webkit-filter: brightness(0.4);
+		}
 	}
+	.image-icon {
+		opacity:0.1;
+	}
+	.social-text {
+		padding-left:45px;
+	}
+
+	.trust {
+
+		img {
+			width: 100%;
+			filter: grayscale(1);
+			-webkit-filter: grayscale(1);
+			opacity:0.4;
+		}
+	}
+
 	.fixed-background {
 		button {
 			@include naira(white, color("primary","base"));
