--- a/src/css/template/_nav.scss
+++ b/src/css/template/_nav.scss
@@ -3,11 +3,11 @@ $transitionProperties: all 350ms ease;
 .navbar {
 	position:relative;
 	font-family: $nav-font;
-
+	z-index: 9999;
 	.burger-menu {
 		display:block;
 		position:absolute;
-		top:25px;
+		top:32px;
 		right:10%;
 		transition: $transitionProperties;
 	}
@@ -34,18 +34,21 @@ $transitionProperties: all 350ms ease;
 		transition: $transitionProperties;
 		margin-top:0px;
 		margin-bottom:0px;
-		&.active {
-			transform: translateY(0px);
-		}
 		li {
 			transition: $transitionProperties;
-			padding:20px;
+			padding:23px;
 			display:block;
 			background-color: color("primary","base");
 			border-bottom: 1px solid color("primary","darken-3");
 			margin:0;
 			padding-left:0px;
 			&:first-child {
+				padding-left: 40px;
+			}
+		}
+		&.active {
+			transform: translateY(0px);
+			li {
 				padding-left: 40px;
 			}
 		}
@@ -74,12 +77,20 @@ $transitionProperties: all 350ms ease;
 		background-color: white;
 		border-bottom:0px solid;
 		box-shadow: 0 0 5px 0 rgba(0,0,0,0.15);
+    	height: 80px;
+		.burger-menu {
+			top: 18px;
+		}
 		.burger-menu div{
 			background: color("grey", "base");
 			&:before, &:after {
 				background: color("grey", "base");
 			}
 		}
+		.logo {
+			top:13px;
+		}
+
 		.logo h3 {
 			color: color("primary", "base");
 		}
@@ -89,6 +100,7 @@ $transitionProperties: all 350ms ease;
 
 				&:first-child { 
 					border: none;
+					margin-left: 0px;
 					h3 {
 						padding-left:0;
 						color:rgba(black, 0.8);
@@ -102,6 +114,20 @@ $transitionProperties: all 350ms ease;
 					}
 					&.active {
 						color:rgba(black, 1);
+					}
+				}
+			}
+			&.active {
+				li:first-child {
+					border-bottom: 1px solid color("primary","darken-3");
+				}
+				li a {
+					color: rgba(255,255,255,0.6);
+					&:hover {
+						color: rgba(255,255,255,0.8);
+					}
+					&.active {
+						color: rgba(255,255,255, 1);
 					}
 				}
 			}
@@ -124,20 +150,20 @@ $transitionProperties: all 350ms ease;
 			display:none!important;
 		}
 		ul {
-			margin-left:calc(10% + 185px);
+			margin-left:calc(10% + 155px);
 			display:inline!important;
 			position:relative;
 			text-transform: uppercase;
 			transition: $transitionProperties;
 			display:none;
-			&.active {
-			}
 			li {
 				margin-top: 0px;
 				margin-left: 0px;
 				display:inline-block;
 				background: transparent;
 				border:none;
+			}
+			&.active {
 			}
 			a {
 				font-size: 1.8rem;
@@ -159,13 +185,18 @@ $transitionProperties: all 350ms ease;
 
 		}
 		&.fixed {
+			height: auto;
 			.logo {
-				top:12px;
+				top:8px;
 			}
 			ul {
 				top:5px;
 				li {
 					padding: 0px 5px 28px 5px;
+					&:first-child { 
+						border: none;
+						margin-left: 25px;
+					}
 				}
 			}
 		}
