--- a/src/css/helper/normalize/extra.scss
+++ b/src/css/helper/normalize/extra.scss
@@ -2,7 +2,9 @@ html, body, body>div {margin:0;padding:0;}
 
 html, body {
   width:100%;
-  height:100%;
+  margin:0;
+  padding:0;
+  min-height:100%;
 }
 
 ul {
