--- a/src/css/template/_contact.scss
+++ b/src/css/template/_contact.scss
@@ -1,9 +1,27 @@
 .contact {
+	.cell {
+		position:relative;
+	}
+	.dot-animation {
+		position:absolute;
+		width: 200px;
+	    height: 200px;
+	    top: 50%;
+	    left: 50%;
+	    margin-left: -100px!important;
+	    margin-top: -100px!important;
+	    z-index: 999;
+		background-image: url('../images/agence/mapAnimation.gif');
+		background-blend-mode: multiply;
+		-webkit-background-blend-mode: multiply, multiply;
+		background-repeat: no-repeat;
+		opacity:0.6;
+	}
 	.map {
 		width:60px;
 		height:60px;
 		opacity:0.3;
-		margin-top: 15px;	
+		margin-top: 65px;	
 	}
 	a {
 		@extend .h4;
@@ -13,6 +31,14 @@
 		&:focus, &:hover {
 			text-decoration: none;
 			border-bottom: 1px solid rgba(color("grey", "darken-1"), 0.8);
+		}
+	}
+}
+
+@include phablet {
+	.contact {
+		.map {
+			margin-top: 15px;	
 		}
 	}
 }
