--- a/src/templates/assistance.jade
+++ b/src/templates/assistance.jade
@@ -35,6 +35,20 @@ section.background
 			hr.lines.light.add-top.tiny.centered
 			h6.remove-bot.half-top(compile-unsafe="'views.support.profile4' | translate")
 			p.i.remove-top.text-grey-60 Thibaud Frere
+		.card.three.col.offset-three
+			.flip.double-bottom
+				#marie.front
+				//#thib-back.back
+			hr.lines.light.add-top.tiny.centered
+			h6.remove-bot.half-top(compile-unsafe="'views.support.profile5' | translate")
+			p.i.remove-top.text-grey-60 Marie Madec
+		.card.three.col
+			.flip.double-bottom
+				#tritz.front
+				//#thib-back.back
+			hr.lines.light.add-top.tiny.centered
+			h6.remove-bot.half-top(compile-unsafe="'views.support.profile6' | translate")
+			p.i.remove-top.text-grey-60 Quentin Tritz
 .container
 	form(name="form" novalidate).row.double-top
 		.eight.offset-two.col.double-top
